--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,9 @@ html
     script(src="/public/js/prefixfree.js")
     link(rel="stylesheet", href="/public/css/style.css", type="text/css")
     script(src="/public/js/global.js")
+    script(src="//code.jquery.com/ui/1.11.2/jquery-ui.js")
   body
-    h1#welcome Welcome to the Cloud
+  div#welcome
+    h1 Welcome to the Cloud
+    h4 Drag the little cloud ... I dare you!
     block content
