--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,11 @@
-#welcome {
+div#welcome {
   color: #A2BFCE;
   padding-left: 130px;
   font-family: "Arial";
 }
 
 #mainContent {
-    background-color: #A2BFCE;
-    border-radius: 4px;
+    background-color: #FFFFCC;
     padding: 10px;
     width: 600px;
     height: 300px;
