--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,8 @@ div#welcome {
 
 #mainContent {
     background-color: #FFFFCC;
+    /*background: url(background-one.png) top left repeat-x,
+    url(background-two.png) bottom left repeat-x;*/
     padding: 10px;
     width: 600px;
     height: 300px;
