--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,13 @@
 doctype html
-html
+html.no-js
   head
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    script(src="https://code.jquery.com/jquery-2.1.1.min.js")
-    script(src="/public/js/prefixfree.js")
     link(rel="stylesheet", href="/public/css/style.css", type="text/css")
+    script(src="https://code.jquery.com/jquery-2.1.1.min.js")
+    script(src="/public/js/modernizr-1.0.js")
+    script(src="/public/js/jquery-ui.min.js")
     script(src="/public/js/global.js")
-    script(src="//code.jquery.com/ui/1.11.2/jquery-ui.js")
+    script(src="/public/js/script.js")
   body
   div#welcome
     h1 Welcome to the Cloud
